Fix column gap preview

--- a/src/blocks/testimonials/editor.scss
+++ b/src/blocks/testimonials/editor.scss
@@ -83,18 +83,19 @@
 }
 .kt-testimonial-columns-1 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
     grid-template-columns: 1fr;
-}
-.kt-testimonial-columns-2 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr;
 }
 .kt-testimonial-columns-3 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
 	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr;
 }
 .kt-testimonial-columns-4 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr;
 }
 .kt-testimonial-columns-5 .kt-testimonial-grid-wrap .block-editor-inner-blocks .block-editor-block-list__layout {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr;
 }
 .kt-testimonial-grid-wrap .kt-testimonial-item-wrap {
     width: 100%;
